--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   device_preview: ^1.2.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
